--- a/Assets/GameController Prototyping/Pausing/Pause Menu Assets/PauseStyling.uss
+++ b/Assets/GameController Prototyping/Pausing/Pause Menu Assets/PauseStyling.uss
@@ -3,14 +3,14 @@ VisualElement {
 
 .pauseButton {
     background-color: rgb(102, 199, 244);
-    padding-top: 5px;
-    padding-right: 5px;
-    padding-bottom: 5px;
-    padding-left: 5px;
-    margin-top: 5px;
-    margin-right: 5px;
-    margin-bottom: 5px;
-    margin-left: 5px;
+    padding-top: 0;
+    padding-right: 0;
+    padding-bottom: 0;
+    padding-left: 0;
+    margin-top: 4px;
+    margin-right: 4px;
+    margin-bottom: 4px;
+    margin-left: 4px;
     border-top-left-radius: 35px;
     border-top-right-radius: 35px;
     border-bottom-right-radius: 35px;
@@ -19,9 +19,9 @@ VisualElement {
     border-right-color: rgb(22, 96, 136);
     border-top-color: rgb(22, 96, 136);
     border-bottom-color: rgb(22, 96, 136);
-    align-self: center;
     width: 50%;
     height: 25%;
+    align-items: center;
 }
 
 .pauseButton:hover {
