--- a/Assets/LevelSelectUSS.uss
+++ b/Assets/LevelSelectUSS.uss
@@ -49,3 +49,43 @@
 .unity-collection-view_item {
     justify-content: center;
 }
+
+.level-container {
+    align-items: center;
+    justify-content: space-between;
+    align-self: center;
+}
+
+.level-select-text {
+    -unity-font: url("project://database/Assets/Fonts/corinto-town-font/CorintoTown-ZpzKx.otf?fileID=12800000&guid=6155a4d73763cb34994c2e13799013d3&type=3#CorintoTown-ZpzKx");
+    -unity-font-definition: initial;
+    -unity-font-style: bold;
+    color: rgb(255, 255, 255);
+    -unity-text-outline-width: 0.5px;
+    -unity-text-outline-color: rgb(0, 0, 0);
+}
+
+.title-text {
+    -unity-font-style: bold;
+    font-size: 32px;
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+}
+
+.level-select-button {
+    border-top-width: 2px;
+    border-right-width: 2px;
+    border-bottom-width: 2px;
+    border-left-width: 2px;
+    border-top-left-radius: 13px;
+    border-top-right-radius: 13px;
+    border-bottom-right-radius: 13px;
+    border-bottom-left-radius: 13px;
+    border-left-color: rgb(14, 61, 63);
+    border-right-color: rgb(14, 61, 63);
+    border-top-color: rgb(14, 61, 63);
+    border-bottom-color: rgb(14, 61, 63);
+    background-color: rgb(191, 229, 231);
+}
