--- a/Assets/UI Assets/Pause Menu Assets/PauseStyling.uss
+++ b/Assets/UI Assets/Pause Menu Assets/PauseStyling.uss
@@ -30,8 +30,8 @@ VisualElement {
 }
 
 .pauseText {
-    -unity-font: url("project://database/Assets/Pausing/Pause%20Menu%20Assets/zig_____.ttf?fileID=12800000&guid=034d6a3d8be9cde47ac0f5acb7da4c37&type=3#zig_____");
-    -unity-font-definition: initial;
-    color: rgb(255, 255, 255);
-    -unity-text-outline-color: rgb(22, 96, 136);
+    font-size: 28px;
+    -unity-font-style: normal;
+    -unity-text-outline-width: 2px;
+    -unity-text-outline-color: rgb(0, 0, 0);
 }
