--- a/Assets/UI Assets/LevelSelect/LevelSelectUSS.uss
+++ b/Assets/UI Assets/LevelSelect/LevelSelectUSS.uss
@@ -3,6 +3,7 @@
     align-items: center;
     justify-content: center;
     background-color: rgb(0, 102, 106);
+    background-image: url("project://database/Assets/UI%20Assets/LevelSelect/Screenshot%202025-01-30%20104625.png?fileID=2800000&guid=9ddb920fdffa58d41b531cbe32af9b47&type=3#Screenshot 2025-01-30 104625");
 }
 
 #main-container {
