--- a/Assets/UI Assets/LevelSelect/LevelSelectUSS.uss
+++ b/Assets/UI Assets/LevelSelect/LevelSelectUSS.uss
@@ -52,8 +52,35 @@
     border-top-color: rgb(14, 61, 63);
     border-bottom-color: rgb(14, 61, 63);
     background-color: rgb(191, 229, 231);
+    width: 100%;
 }
 
 .level-select-button:hover {
     background-color: rgb(112, 138, 140);
+}
+
+.details-container {
+    border-left-color: rgb(14, 61, 63);
+    border-right-color: rgb(14, 61, 63);
+    border-top-color: rgb(14, 61, 63);
+    border-bottom-color: rgb(14, 61, 63);
+    border-top-width: 2px;
+    border-right-width: 2px;
+    border-bottom-width: 2px;
+    border-left-width: 2px;
+    width: 100%;
+    height: 120px;
+    border-top-left-radius: 13px;
+    border-top-right-radius: 13px;
+    border-bottom-right-radius: 13px;
+    border-bottom-left-radius: 13px;
+    padding-top: 5px;
+    padding-right: 5px;
+    padding-bottom: 5px;
+    padding-left: 5px;
+    background-color: rgb(191, 229, 231);
+    margin-top: 5px;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    margin-left: 5px;
 }
