--- a/Assets/UI Assets/LevelSelect/LevelSelectUSS.uss
+++ b/Assets/UI Assets/LevelSelect/LevelSelectUSS.uss
@@ -27,7 +27,7 @@
 
 .title-text {
     -unity-font-style: bold;
-    font-size: 32px;
+    font-size: 200%;
     margin-top: 10px;
     margin-right: 10px;
     margin-bottom: 10px;
@@ -52,7 +52,7 @@
     -unity-font: url("project://database/Assets/Fonts/lumierepolis-font/LumierepolisBold-rv5E9.ttf?fileID=12800000&guid=94fd79c4f0c06b24e9f2ac3510a1f829&type=3#LumierepolisBold-rv5E9");
     -unity-font-definition: initial;
     color: rgb(193, 202, 214);
-    font-size: 38px;
+    font-size: 200%;
     -unity-font-style: normal;
     -unity-text-outline-color: rgb(22, 96, 136);
     -unity-text-outline-width: 1px;
