--- a/Assets/UI Assets/Pause Menu Assets/PauseStyling.uss
+++ b/Assets/UI Assets/Pause Menu Assets/PauseStyling.uss
@@ -22,6 +22,10 @@ VisualElement {
     width: 50%;
     height: 25%;
     align-items: center;
+    border-top-width: 3px;
+    border-right-width: 3px;
+    border-bottom-width: 3px;
+    border-left-width: 3px;
 }
 
 .pauseButton:hover {
@@ -30,8 +34,10 @@ VisualElement {
 }
 
 .pauseText {
-    font-size: 28px;
+    font-size: 30px;
     -unity-font-style: normal;
     -unity-text-outline-width: 2px;
-    -unity-text-outline-color: rgb(0, 0, 0);
+    -unity-text-outline-color: rgb(22, 96, 136);
+    -unity-font: url("project://database/Assets/Fonts/lumierepolis-font/Lumierepolis-Yqvn8.ttf?fileID=12800000&guid=e65da2d9dd7f6e745b668a7b9a836954&type=3#Lumierepolis-Yqvn8");
+    -unity-font-definition: initial;
 }
