--- a/Assets/UI Assets/Tutorial Splash/TutorialSplash.uss
+++ b/Assets/UI Assets/Tutorial Splash/TutorialSplash.uss
@@ -6,7 +6,7 @@
     background-color: rgba(102, 199, 244, 0.6);
     flex-grow: 1;
     align-self: center;
-    width: 80%;
+    width: 100%;
     height: 80%;
     border-left-color: rgba(22, 96, 136, 0.78);
     border-right-color: rgba(22, 96, 136, 0.78);
@@ -34,14 +34,14 @@
 
 .step-container {
     flex-grow: 1;
-    margin-top: 10px;
-    margin-right: 10px;
-    margin-bottom: 10px;
-    margin-left: 10px;
-    padding-top: 5px;
-    padding-right: 5px;
-    padding-bottom: 5px;
-    padding-left: 5px;
+    margin-top: 2px;
+    margin-right: 2px;
+    margin-bottom: 2px;
+    margin-left: 2px;
+    padding-top: 0;
+    padding-right: 0;
+    padding-bottom: 0;
+    padding-left: 0;
     flex-direction: row;
     border-left-color: rgb(22, 96, 136);
     border-right-color: rgb(22, 96, 136);
@@ -64,6 +64,10 @@
     flex-wrap: wrap;
     overflow: visible;
     white-space: normal;
+    margin-top: 0;
+    margin-right: 0;
+    margin-bottom: 0;
+    margin-left: 0;
 }
 
 .step-title {
@@ -86,6 +90,9 @@
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
     border-bottom-left-radius: 5px;
+    align-items: stretch;
+    align-self: stretch;
+    justify-content: center;
 }
 
 .step-text {
@@ -108,6 +115,8 @@
     margin-bottom: 5px;
     margin-left: 5px;
     width: 75%;
+    align-self: stretch;
+    justify-content: space-around;
 }
 
 .step-text-label {
